--- a/ci/manifest/helm/locust/values.yaml
+++ b/ci/manifest/helm/locust/values.yaml
@@ -8,7 +8,7 @@ dockerImage: neerajlnm/mns-locust-image
 # Container environment variables
 ENV:
  ROLE=standalone
- TARGET_HOST=https://www.sit2.marksandspencer.com/
+ TARGET_HOST=https://content-v2.perf.apis.devops.mnscorp.net
  LOCUST_FILE=https://raw.githubusercontent.com/neerajagr/testRepo/master/simple.py 
  SLAVE_MUL=4
  AUTOMATIC=False
