--- a/ci/manifest/helm/locust/values.yaml
+++ b/ci/manifest/helm/locust/values.yaml
@@ -24,7 +24,7 @@ replicasMax: 4
 cpuTargetPercentage: 25
 
 ingress:
-  name: mnsLocustTest
+  name: mnslocust
   subdomain: apps
 
   # Mark ssl as true to enable SSL on this service
