--- a/ci/manifest/helm/locust/values.yaml
+++ b/ci/manifest/helm/locust/values.yaml
@@ -4,7 +4,7 @@ namespace: api-digitalservices-dev
 dockerImage: registry.opensource.zalan.do/tip/docker-locust
 # dockerTag: 1.0.5
 dockerPort: 8089
-args: "-i --rm -v $PWD/reports:/opt/reports -v $PWD/:/opt/script -v $PWD/credentials:/meta/credentials -p 8089:8089"
+args: "-i --rm -p 8089:8089"
 
 # Container environment variables
 ENV:
