--- a/ci/manifest/helm/locust/values.yaml
+++ b/ci/manifest/helm/locust/values.yaml
@@ -2,7 +2,7 @@
 namespace: api-digitalservices-dev
 
 dockerImage: registry.opensource.zalan.do/tip/docker-locust
-# dockerTag: 1.0.5
+dockerTag: latest
 dockerPort: 8089
 args: -i --rm -p 8089:8089
 
