--- a/ci/manifest/helm/locust/values.yaml
+++ b/ci/manifest/helm/locust/values.yaml
@@ -8,10 +8,11 @@ dockerPort: 8089
 
 # Container environment variables
 ENV:
- target: "https://content-v2.perf.apis.devops.mnscorp.net"
- locust_file: "https://raw.githubusercontent.com/neerajagr/testRepo/master/simple_post.py,https://raw.githubusercontent.com/neerajagr/testRepo/master/payloads.json"
- slaves: 4
- mode: manual
+ ROLE: standalone
+ TARGET_HOST: "https://content-v2.perf.apis.devops.mnscorp.net"
+ LOCUST_FILE: "https://raw.githubusercontent.com/neerajagr/testRepo/master/simple.py" 
+ SLAVE_MUL: 4
+ AUTOMATIC: False
 
 # Profile
 profile: dev  -Xms512m -Xmx2048m
