--- a/ci/manifest/helm/locust/values.yaml
+++ b/ci/manifest/helm/locust/values.yaml
@@ -10,7 +10,7 @@ dockerPort: 8089
 ENV:
  ROLE: standalone
  TARGET_HOST: "https://content-v2.perf.apis.devops.mnscorp.net"
- LOCUST_FILE: "https://raw.githubusercontent.com/neerajagr/testRepo/master/simple.py" 
+ LOCUST_FILE: "https://raw.githubusercontent.com/neerajagr/testRepo/master/simple_post.py,https://raw.githubusercontent.com/neerajagr/testRepo/master/payloads.json" 
  SLAVE_MUL: 4
  AUTOMATIC: False
 
